--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
                     <div id="toptitle">
                         <h1 style="color: black;">Hanshi Sun &nbsp 孙寒石</h1>
                     </div>
-                    <p>I am an incoming Master in Electrical and Computer Engineering at <a href=https://www.cmu.edu>Carnegie Mellon University</a>. I obtained my bachelor degree at <a
+                    <p>I am a Master student in Electrical and Computer Engineering at <a href=https://www.cmu.edu>Carnegie Mellon University</a>. I obtained my bachelor degree at <a
                             href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a>. I was a
                         member of the <a href="http://palm.seu.edu.cn/members.html">PAttern Learning and Mining (PALM)
                             Lab</a> , where I am fortunate to be advised by Prof. <a
-                            href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>. I was
+                            href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>. Before, I was
                         a research intern at the <a href=https://www.ualberta.ca/index.html target=_blank
-                        rel=noopener>University of Alberta</a> before, supervised by Prof. <a
-                            href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>. I am an intern at
-                            <a href=https://www.apple.com>&#63743; Apple</a> now.
+                        rel=noopener>University of Alberta</a>, supervised by Prof. <a
+                            href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>; I was an intern at
+                            <a href=https://www.apple.com>&#63743; Apple</a>. Now I am working on LLM inference efficiency with Prof. <a
+                            href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>.
                         <br><br>
-                        Research Interest: Machine Learning<br>
+                        Research Interest: Machine Learning<br><br>
                         <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> hanshis [at] andrew [dot] cmu [dot] edu<br>
                         <img src="assets/img/Outlook.png" width="20px" style="margin-bottom:-3px"> hanshi.sun [at]
                         outlook [dot] com<br>
@@ -44,10 +45,10 @@
                             <img src="assets/img/LinkedIn.png" width="20px" style="margin-bottom:-3px">
                             LinkedIn
                         </a><br>
-                        <a href="assets/pdf/CV.pdf">
+                        <!-- <a href="assets/pdf/CV.pdf">
                             <img src="assets/img/cv.jpeg" width="20px" style="margin-bottom:-3px">
                             Curriculum Vitae
-                        </a><br>
+                        </a><br> -->
                         <a href="https://preminstrel.github.io/blog" target="blank">
                             <img src="assets/img/blog.jpeg" width="20px" style="margin-bottom:-3px">
                             Blog
@@ -63,6 +64,11 @@
     <h2>News</h2>
     <ul>
         <div style="height:60px;width:fit-content;overflow:auto;background:#FFFFFF;">
+            <li>
+                <p>[2023/11/06] Joined Prof. <a
+                    href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>'s group at CMU</a>.
+                </p>
+            </li>
             <li>
                 <p>[2023/06/20] I graduated from <a
                             href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a> with a bachelor degree.</p>
@@ -93,7 +99,10 @@
             <tr>
                 <td width="800">
                     <p><strong> Carnegie Mellon University, Pittsburgh, United States (Aug 2023 - Dec 2024)</strong></p>
-                    <p><i>M.S. in Electrical & Computer Engineering</i></p>
+                    <i>M.S. in Electrical & Computer Engineering</i>
+                    <ul>
+                        <li>Overall GPA: <font style="color: #bb0000;"> 4.0/4.0</font></li>
+                    </ul>
                 </td>
                 <td width="120px">
                     <img src="assets/img/cmu_logo.jpeg" width="110px">
@@ -112,7 +121,7 @@
                     <p><strong> Southeast University, Nanjing, China (Sep 2019 - Jul 2023)</strong></p>
                     <i>B.E. in Electronic Science and Technology</i>
                     <ul>
-                        <li>Overall GPA: <font style="color: #bb0000;"> 3.98/4.0, 94.04/100 </font></li>
+                        <li>Overall GPA: <font style="color: #bb0000;"> 3.96/4.0, 93.69/100 </font></li>
                         <li>2021 & 2022 China National Scholarship</li>
                     </ul>
                 </td>
@@ -201,15 +210,36 @@
     <h2>Publications</h2>
     <table>
         <tr>
-            <td width="315">
-                <img src="assets/img/BMAD.png" width="300px">
+            <td width="415">
+                <img src="assets/img/TriForce.png" width="400px">
             </td>
-            <td>
+            <td  valign="top">
+                <b>TriForce: Lossless Acceleration of Long Sequence Generation with Hierarchical Speculative Decoding
+                </b> <br>
+                <br>
+                <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
+                arXiv:2404.11912, 2024
+                <p></p>
+                <p>
+                    [<a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">paper</a>] [<a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code</a>] [<a href="https://infini-ai-lab.github.io/TriForce/" target="blank">blog</a>]
+                </p>
+            </td>
+        </tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+    </table>
+    <table>
+        <tr>
+            <td width="415">
+                <img src="assets/img/BMAD.png" width="400px">
+            </td>
+            <td  valign="top">
                 <b>BMAD: Benchmarks for Medical Anomaly Detection
                 </b> <br>
                 <br>
                 Jinan Bao, <strong>Hanshi Sun</strong>, Hanqiu Deng, Yinsheng He, Zhaoxiang Zhang, and <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a> <br>
-                arXiv:2306.11876, 2023
+                Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>) Workshops, 2024
                 <p></p>
                 <p>
                     [<a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">paper</a>] [<a href="https://github.com/DorisBao/BMAD" target="blank">code</a>]
@@ -222,10 +252,10 @@
     </table>
     <table>
         <tr>
-            <td width="315">
-                <img src="assets/img/combat_label_noise.png" width="300px">
+            <td width="415">
+                <img src="assets/img/combat_label_noise.png" width="400px">
             </td>
-            <td>
+            <td  valign="top">
                 <b>Combating Medical Noisy Labels by Disentangled Distribution Learning and Consistency Regularization
                 </b> <br> <br>
                 <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>, <a href="https://huangleibuaa.github.io">Lei Huang</a>, <a href="https://taozh2017.github.io">Tao Zhou</a> and <strong>Hanshi Sun</strong><br>
@@ -242,10 +272,10 @@
     </table>
     <table>
         <tr>
-            <td width="315">
-                <img src="assets/img/ecg.png" width="300px">
+            <td width="415">
+                <img src="assets/img/ecg.png" width="400px">
             </td>
-            <td>
+            <td valign="top">
                 <b>Arrhythmia Classifier Using Convolutional Neural Network with Adaptive Loss-aware Multi-bit Networks
                     Quantization
                 </b> <br>
@@ -255,9 +285,9 @@
                 (<i><b>ICAICE</b></i>), 2021.
                 <p></p>
                 <p>
-                    [<a href="https://preminstrel.github.io/ECG-Classification/" target="blank">project page</a>]
                     [<a href="https://ieeexplore.ieee.org/document/9797527" target="blank">paper</a>]
                     [<a href="https://github.com/preminstrel/ECG-Classification" target="blank">code</a>]
+                    [<a href="https://preminstrel.github.io/ECG-Classification/" target="blank">page</a>]
                 </p>
             </td>
         </tr>
@@ -278,7 +308,6 @@
             <li>Columbia University: <a href="https://eshoyuan.github.io">Yixiao Yuan</a></li>
             <li>UW: <a href="https://huapengzhou.life">Huapeng Zhou</a></li>
             <li>BU: <a href="https://ming-cong-tang.com/">Mingcong Tang</a></li>
-            <li>PolyU: <a href="https://zhe-wang0018.github.io">Zhe Wang</a></li>
             <li>HHU: <a href="https://carelessty.github.io">Tingyu Chen</a></li>
             <li>CUC: <a href="https://primopan.github.io">Primo Pan</a></li>
         </ul>
@@ -294,7 +323,7 @@
             </center>
         </p>
         <center>
-            <p style="color: darkgray;"> © Hanshi Sun 2023</p>
+            <p style="color: darkgray;"> © Hanshi Sun 2024</p>
         </center>
 
     </div>
