--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Hanshi Sun</title>
     <link rel="shortcut icon" href="assets/img/title.ico">
     <link rel="stylesheet" href="red.css" type="text/css">
+    <style>
+        @font-face {
+            font-family: 'TriForceFont';
+            src: url('assets/Triforce.ttf') format('truetype');
+        }
+
+        .TriForceFont {
+            font-family: 'TriForceFont', sans-serif !important;
+            font-size: 3.0rem;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,7 +31,8 @@
                     <div id="toptitle">
                         <h1 style="color: black;">Hanshi Sun &nbsp 孙寒石</h1>
                     </div>
-                    <p>I am a Master student in Electrical and Computer Engineering at <a href=https://www.cmu.edu>Carnegie Mellon University</a>. I obtained my bachelor degree at <a
+                    <p>I am a Master student in Electrical and Computer Engineering at <a href=https://www.cmu.edu>Carnegie Mellon University</a>. Now I am working on LLM inference efficiency with Prof. <a
+                        href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>. I obtained my bachelor degree at <a
                             href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a>. I was a
                         member of the <a href="http://palm.seu.edu.cn/members.html">PAttern Learning and Mining (PALM)
                             Lab</a> , where I am fortunate to be advised by Prof. <a
@@ -28,15 +40,14 @@
                         a research intern at the <a href=https://www.ualberta.ca/index.html target=_blank
                         rel=noopener>University of Alberta</a>, supervised by Prof. <a
                             href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>; I was an intern at
-                            <a href=https://www.apple.com>&#63743; Apple</a>. Now I am working on LLM inference efficiency with Prof. <a
-                            href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>.
+                            <a href=https://www.apple.com>&#63743; Apple</a>.
                         <br><br>
-                        Research Interest: Machine Learning<br><br>
-                        <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> hanshis [at] andrew [dot] cmu [dot] edu<br>
-                        <img src="assets/img/Outlook.png" width="20px" style="margin-bottom:-3px"> hanshi.sun [at]
-                        outlook [dot] com<br>
+                        <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> hanshis [at] andrew [dot] cmu [dot] edu<br><br>
                     </p>
                     <p style="line-height: 1.8;">
+                        <a href="https://twitter.com/preminstrel">
+                            <img src="assets/img/X.png" width="20px" style="margin-bottom:-3px"> @preminstrel
+                        </a><br>
                         <a href="https://github.com/preminstrel">
                             <img src="assets/img/github.jpeg" width="20px" style="margin-bottom:-3px">
                             GitHub (preminstrel)
@@ -45,10 +56,6 @@
                             <img src="assets/img/LinkedIn.png" width="20px" style="margin-bottom:-3px">
                             LinkedIn
                         </a><br>
-                        <!-- <a href="assets/pdf/CV.pdf">
-                            <img src="assets/img/cv.jpeg" width="20px" style="margin-bottom:-3px">
-                            Curriculum Vitae
-                        </a><br> -->
                         <a href="https://preminstrel.github.io/blog" target="blank">
                             <img src="assets/img/blog.jpeg" width="20px" style="margin-bottom:-3px">
                             Blog
@@ -91,8 +98,122 @@
             </li>
         </div>
     </ul>
+    <h2>Publications</h2>
+    I'm interested in LLM efficiency, MLSys, generative AI. Selected papers are <span style="background-color: #ffffd0;">highlighted</span>.
     <br>
+    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <tr onmouseout="triforce_stop()" onmouseover="triforce_start()" bgcolor="#ffffd0">
+            <td style="padding:10px;width:25%;vertical-align:middle">
+                <div>
+                    <div style="opacity: 0; position: absolute; transition: opacity .2s ease-in-out; -moz-transition: opacity .2 ease-in-out; -webkit-transition: opacity .2 ease-in-out;" id="triforce_image">
+                        <video loop autoplay muted width="400px" >
+                            <source src="assets/video/TriForce.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <div>
+                        <img src="assets/img/TriForce.png" alt="TriForce", style="width: 400px; padding-top:40px; padding-bottom: 25px;">
+                    </div>
+                </div>
+                <script type="text/javascript">
+                    function triforce_start() {
+                        document.getElementById('triforce_image').style.opacity = "1";
+                    }
 
+                    function triforce_stop() {
+                        document.getElementById('triforce_image').style.opacity = "0";
+                    }
+                    triforce_stop()
+                </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="https://infini-ai-lab.github.io/TriForce/" target="blank"><b><span class="TriForceFont" style="display: inline; font-size: 15pt;">*</span>TriForce: Lossless Acceleration of Long Sequence Generation with Hierarchical Speculative Decoding</b></a>
+                <br>
+                <br>
+                <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
+                <p><i>arXiv</i>, 2024</p>
+                <p>
+                    <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">project page</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">paper</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code</a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">video</a>
+                </p>
+                <br>
+                <p>Training-free Lossless Long Sequence Generation Acceleration</p>
+            </td>
+        </tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+    </table>
+    <table>
+        <tr>
+            <td style="padding:10px;width:25%;vertical-align:middle">
+                <img src="assets/img/BMAD.png" width="400px">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <b>BMAD: Benchmarks for Medical Anomaly Detection
+                </b> <br>
+                <br>
+                Jinan Bao, <strong>Hanshi Sun</strong>, Hanqiu Deng, Zhaoxiang Zhang, and <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>
+                <br>
+                <p><i>CVPR Workshop</i>, 2024</p>
+                <p>
+                    <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">paper</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code</a>
+                </p>
+                <br>
+                <p>This benchmark encompasses six reorganized datasets from five medical domains (i.e. brain MRI, liver CT, retinal OCT, chest X-ray, and digital histopathology) and three key evaluation metrics, and includes a total of fourteen state-of-the-art AD algorithms.</p>
+            </td>
+        </tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+    </table>
+    <table>
+        <tr>
+            <td style="padding:10px;width:25%;vertical-align:middle">
+                <img src="assets/img/combat_label_noise.png" width="400px">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <b>Combating Medical Noisy Labels by Disentangled Distribution Learning and Consistency Regularization
+                </b> <br> <br>
+                <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>, <a href="https://huangleibuaa.github.io">Lei Huang</a>, <a href="https://taozh2017.github.io">Tao Zhou</a> and <strong>Hanshi Sun</strong><br>
+                <i>Future Generation Computer Systems (FGCS</i>), 2022
+                <p></p>
+                <p>
+                    <a href="https://www.sciencedirect.com/science/article/pii/S0167739X22004228" target="blank">paper</a>
+                </p>
+                <br>
+                <p>Disentangled distribution learning reduces effect of label uncertainty and ambiguity</p>
+            </td>
+        </tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+    </table>
+    <table>
+        <tr>
+            <td style="padding:10px;width:25%;vertical-align:middle">
+                <img src="assets/img/ecg.png" width="400px">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+                <b>Arrhythmia Classifier Using Convolutional Neural Network with Adaptive Loss-aware Multi-bit Networks
+                    Quantization
+                </b> <br>
+                <br>
+                <strong>Hanshi Sun</strong>, Ao Wang, Ninghao Pu, Zhiqing Li, Junguang Huang, <a href="https://electronic.seu.edu.cn/lh/list.htm">Hao Liu</a> and Zhi Qi <br>
+                <i>ICAICE</i>, 2021
+                <p></p>
+                <p>
+                    <a href="https://preminstrel.github.io/ECG-Classification/" target="blank">project page</a> / 
+                    <a href="https://ieeexplore.ieee.org/document/9797527" target="blank">paper</a> / 
+                    <a href="https://github.com/preminstrel/ECG-Classification" target="blank">code</a> 
+                </p>
+                <br>
+                <p>Present a 1-D adaptive loss-aware quantization, achieving a high compression rate that reduces memory consumption by 23.36x</p>
+            </td>
+        </tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+        <tr>&nbsp</tr>
+    </table>
     <h2>Education</h2>
     <table>
         <tbody>
@@ -132,7 +253,6 @@
             <tr></tr>
         </tbody>
     </table>
-
     <h2>Research Experience</h2>
     <table>
         <tbody>
@@ -206,94 +326,6 @@
             </tr>
             <tr></tr>
         </tbody>
-    </table>
-    <h2>Publications</h2>
-    <table>
-        <tr>
-            <td width="415">
-                <img src="assets/img/TriForce.png" width="400px">
-            </td>
-            <td  valign="top">
-                <b>TriForce: Lossless Acceleration of Long Sequence Generation with Hierarchical Speculative Decoding
-                </b> <br>
-                <br>
-                <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
-                arXiv:2404.11912, 2024
-                <p></p>
-                <p>
-                    [<a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">paper</a>] [<a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code</a>] [<a href="https://infini-ai-lab.github.io/TriForce/" target="blank">blog</a>]
-                </p>
-            </td>
-        </tr>
-        <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
-    </table>
-    <table>
-        <tr>
-            <td width="415">
-                <img src="assets/img/BMAD.png" width="400px">
-            </td>
-            <td  valign="top">
-                <b>BMAD: Benchmarks for Medical Anomaly Detection
-                </b> <br>
-                <br>
-                Jinan Bao, <strong>Hanshi Sun</strong>, Hanqiu Deng, Yinsheng He, Zhaoxiang Zhang, and <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a> <br>
-                Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (<i><b>CVPR</b></i>) Workshops, 2024
-                <p></p>
-                <p>
-                    [<a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">paper</a>] [<a href="https://github.com/DorisBao/BMAD" target="blank">code</a>]
-                </p>
-            </td>
-        </tr>
-        <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
-    </table>
-    <table>
-        <tr>
-            <td width="415">
-                <img src="assets/img/combat_label_noise.png" width="400px">
-            </td>
-            <td  valign="top">
-                <b>Combating Medical Noisy Labels by Disentangled Distribution Learning and Consistency Regularization
-                </b> <br> <br>
-                <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>, <a href="https://huangleibuaa.github.io">Lei Huang</a>, <a href="https://taozh2017.github.io">Tao Zhou</a> and <strong>Hanshi Sun</strong><br>
-                <em>Future Generation Computer Systems</em>, (<i><b>FGCS</b></i>), 2022.
-                <p></p>
-                <p>
-                    [<a href="https://www.sciencedirect.com/science/article/pii/S0167739X22004228" target="blank">paper</a>]
-                </p>
-            </td>
-        </tr>
-        <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
-    </table>
-    <table>
-        <tr>
-            <td width="415">
-                <img src="assets/img/ecg.png" width="400px">
-            </td>
-            <td valign="top">
-                <b>Arrhythmia Classifier Using Convolutional Neural Network with Adaptive Loss-aware Multi-bit Networks
-                    Quantization
-                </b> <br>
-                <br>
-                <strong>Hanshi Sun</strong>, Ao Wang, Ninghao Pu, Zhiqing Li, Junguang Huang, <a href="https://electronic.seu.edu.cn/lh/list.htm">Hao Liu</a> and Zhi Qi <br>
-                <em>International Conference on Artificial Intelligence and Computer Engineering</em>,
-                (<i><b>ICAICE</b></i>), 2021.
-                <p></p>
-                <p>
-                    [<a href="https://ieeexplore.ieee.org/document/9797527" target="blank">paper</a>]
-                    [<a href="https://github.com/preminstrel/ECG-Classification" target="blank">code</a>]
-                    [<a href="https://preminstrel.github.io/ECG-Classification/" target="blank">page</a>]
-                </p>
-            </td>
-        </tr>
-        <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
     </table>
     <h2>Miscellaneous</h2>
     <h4>Videos:</h4>
