--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         a research intern at the <a href=https://www.ualberta.ca/index.html target=_blank
                         rel=noopener>University of Alberta</a>, supervised by Prof. <a
                             href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>; I was an intern at
-                            <a href=https://www.apple.com>&#63743; Apple</a>.
+                            <a href=https://www.apple.com> Apple</a>.
                         <br><br>
                         <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> hanshis [at] andrew [dot] cmu [dot] edu<br><br>
                     </p>
@@ -70,30 +70,33 @@
 
     <h2>News</h2>
     <ul>
-        <div style="height:60px;width:fit-content;overflow:auto;background:#FFFFFF;">
+        <div style="height:135px;width:fit-content;overflow:auto;background:#FFFFFF;">
             <li>
-                <p>[2023/11/06] Joined Prof. <a
-                    href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>'s group at CMU</a>.
+                <p>[2024/06/03] Work as a MLSys Research Intern in Seed-Foundation team at ByteDance (Seattle Office) <img src="assets/img/ByteDance Logo English.png" width="100px" style="vertical-align:middle" >.
                 </p>
             </li>
             <li>
-                <p>[2023/06/20] I graduated from <a
-                            href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a> with a bachelor degree.</p>
+                <p>[2023/11/06] Join Prof. <a
+                    href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>'s group at CMU <img src="assets/img/cmu_logo.jpeg" height="28px" style="vertical-align:middle"> <img src="assets/img/cmu_logo_2.png" height="26px" style="vertical-align:middle"></a>.
+                </p>
             </li>
-            
             <li>
+                <p>[2023/06/20] Graduate from <a
+                            href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a> <img src="assets/img/seu_l.jpeg" height="26px" style="vertical-align:middle"> with a bachelor degree.</p>
+            </li>
+            <!-- <li>
                 <p>[2023/02/17] I will pursue my M.S. in ECE at <a href=https://www.cmu.edu>Carnegie Mellon University</a> in Fall 2023.</p>
                 </p>
-            </li>
+            </li> -->
             <li>
-                <p>[2022/11/15] I am working at <a href=https://www.apple.com>&#63743; Apple</a> as an intern in EE/SW team for eight months.
+                <p>[2022/11/15] I am working at <img src="assets/img/apple.png" width=15px"  style="vertical-align:middle"> Apple as an intern in EE/SW team for eight months.
                 </p>
             </li>
             <li>
                 <p>[2022/07/06] I am working as a research intern during summer 2022 in Prof.<a
                         href=https://www.ece.ualberta.ca/~xingyu/index.html target=_blank rel=noopener>
                         Xingyu Li</a>&rsquo;s group at the <a href=https://www.ualberta.ca/index.html target=_blank
-                        rel=noopener>University of Alberta</a>.
+                        rel=noopener>University of Alberta</a> <img src="assets/img/University_of_Alberta_logo.png" width="80px" style="vertical-align:middle">.
                 </p>
             </li>
         </div>
@@ -133,7 +136,7 @@
                 <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
                 <p><i>arXiv</i>, 2024</p>
                 <p>
-                    <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">project page</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">paper</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code</a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">video</a>
+                    <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">project page</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">paper</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">video</a>
                 </p>
                 <br>
                 <p>Training-free Lossless Long Sequence Generation Acceleration</p>
@@ -156,7 +159,7 @@
                 <br>
                 <p><i>CVPR Workshop</i>, 2024</p>
                 <p>
-                    <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">paper</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code</a>
+                    <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">paper</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code <img src="https://img.shields.io/github/stars/DorisBao/BMAD?style=social&label=Github+Stars" style="vertical-align:middle"></a>
                 </p>
                 <br>
                 <p>This benchmark encompasses six reorganized datasets from five medical domains (i.e. brain MRI, liver CT, retinal OCT, chest X-ray, and digital histopathology) and three key evaluation metrics, and includes a total of fourteen state-of-the-art AD algorithms.</p>
@@ -293,7 +296,7 @@
                         </li>
                         <li>Project 1: Energy-efficient DNN Algorithm for ECG Classification</li>
                         <li>Project 2: Multi-Modal Multi-task Transformer on Disease Detection</li>
-                        <li>Project 2: Multi-task Learning For Multi-disease Classification</li>
+                        <li>Project 3: Multi-task Learning For Multi-disease Classification</li>
                     </ul>
                 </td>
                 <td width="141px">
@@ -309,6 +312,19 @@
     <h2>Professional Experience</h2>
     <table>
         <tbody>
+            <tr>
+                <td width="800">
+                    <p><strong>ByteDance Inc., Seattle, WA (Jun 2024 - Aug 2024)</strong></p>
+                    <i>MLSys Research Intern in Seed-Foundation</i>
+                    <ul>
+                        <li>Placeholder</li>
+                    </ul>
+                    </li>
+                </td>
+                <td width="288px">
+                    <img src="assets/img/ByteDance Logo English.png" width="288px" style="padding:10px;vertical-align:middle">
+                </td>
+            </tr>
             <tr>
                 <td width="800">
                     <p><strong>Apple Inc., Shenzhen, China (Nov 2022 - Jun 2023)</strong></p>
