--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                             href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>. Before, I was
                         a research intern at the <a href=https://www.ualberta.ca/index.html target=_blank
                         rel=noopener>University of Alberta</a>, supervised by Prof. <a
-                            href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>; I was an intern at
-                            <a href=https://www.apple.com> Apple</a>.
+                            href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>. I also worked with Prof. Hao Liu before.
                         <br><br>
                         <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> hanshis [at] andrew [dot] cmu [dot] edu<br><br>
                     </p>
@@ -70,30 +69,34 @@
 
     <h2>News</h2>
     <ul>
-        <div style="height:135px;width:fit-content;overflow:auto;background:#FFFFFF;">
+        <div style="height:170px;width:fit-content;overflow:auto;background:#FFFFFF;">
             <li>
-                <p>[2024/06/03] Work as a MLSys Research Intern in Seed-Foundation team at ByteDance (Seattle Office) <img src="assets/img/ByteDance Logo English.png" width="100px" style="vertical-align:middle" >.
+                <p style="line-height: 1.5;">[2024/07/09] Our <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">TriForce</a> has been accepted by <a href="https://colmweb.org/" target="blank">COLM 2024</a> 🦙! See you in Philadelphia!
                 </p>
             </li>
             <li>
-                <p>[2023/11/06] Join Prof. <a
+                <p style="line-height: 1.5;">[2024/06/03] Work as a MLSys Research Intern in Seed-Foundation team at ByteDance (Seattle Office) <img src="assets/img/ByteDance Logo English.png" width="100px" style="vertical-align:middle" >.
+                </p>
+            </li>
+            <li>
+                <p style="line-height: 1.5;">[2023/11/06] Join Prof. <a
                     href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>'s group at CMU <img src="assets/img/cmu_logo.jpeg" height="28px" style="vertical-align:middle"> <img src="assets/img/cmu_logo_2.png" height="26px" style="vertical-align:middle"></a>.
                 </p>
             </li>
             <li>
-                <p>[2023/06/20] Graduate from <a
+                <p style="line-height: 1.5;">[2023/06/20] Graduate from <a
                             href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a> <img src="assets/img/seu_l.jpeg" height="26px" style="vertical-align:middle"> with a bachelor degree.</p>
             </li>
             <!-- <li>
-                <p>[2023/02/17] I will pursue my M.S. in ECE at <a href=https://www.cmu.edu>Carnegie Mellon University</a> in Fall 2023.</p>
+                <p style="line-height: 1.5;">[2023/02/17] I will pursue my M.S. in ECE at <a href=https://www.cmu.edu>Carnegie Mellon University</a> in Fall 2023.</p>
                 </p>
             </li> -->
             <li>
-                <p>[2022/11/15] I am working at <img src="assets/img/apple.png" width=15px"  style="vertical-align:middle"> Apple as an intern in EE/SW team for eight months.
+                <p style="line-height: 1.5;">[2022/11/15] I am working at <img src="assets/img/apple.png" width=15px"  style="vertical-align:middle"> Apple as an intern in EE/SW team for eight months.
                 </p>
             </li>
             <li>
-                <p>[2022/07/06] I am working as a research intern during summer 2022 in Prof.<a
+                <p style="line-height: 1.5;">[2022/07/06] I am working as a research intern during summer 2022 in Prof.<a
                         href=https://www.ece.ualberta.ca/~xingyu/index.html target=_blank rel=noopener>
                         Xingyu Li</a>&rsquo;s group at the <a href=https://www.ualberta.ca/index.html target=_blank
                         rel=noopener>University of Alberta</a> <img src="assets/img/University_of_Alberta_logo.png" width="80px" style="vertical-align:middle">.
@@ -134,7 +137,7 @@
                 <br>
                 <br>
                 <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
-                <p><i>arXiv</i>, 2024</p>
+                <p><i>Conference on Language Modeling (COLM)</i>, 2024</p><br>
                 <p>
                     <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">project page</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">paper</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">video</a>
                 </p>
@@ -157,7 +160,7 @@
                 <br>
                 Jinan Bao, <strong>Hanshi Sun</strong>, Hanqiu Deng, Zhaoxiang Zhang, and <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>
                 <br>
-                <p><i>CVPR Workshop</i>, 2024</p>
+                <p><i>Computer Vision and Pattern Recognition (CVPR) Workshop</i>, 2024</p><br>
                 <p>
                     <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">paper</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code <img src="https://img.shields.io/github/stars/DorisBao/BMAD?style=social&label=Github+Stars" style="vertical-align:middle"></a>
                 </p>
@@ -178,8 +181,7 @@
                 <b>Combating Medical Noisy Labels by Disentangled Distribution Learning and Consistency Regularization
                 </b> <br> <br>
                 <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>, <a href="https://huangleibuaa.github.io">Lei Huang</a>, <a href="https://taozh2017.github.io">Tao Zhou</a> and <strong>Hanshi Sun</strong><br>
-                <i>Future Generation Computer Systems (FGCS</i>), 2022
-                <p></p>
+                <i>Future Generation Computer Systems (FGCS)</i>, 2022<br><br>
                 <p>
                     <a href="https://www.sciencedirect.com/science/article/pii/S0167739X22004228" target="blank">paper</a>
                 </p>
@@ -199,11 +201,10 @@
             <td style="padding:20px;width:75%;vertical-align:middle">
                 <b>Arrhythmia Classifier Using Convolutional Neural Network with Adaptive Loss-aware Multi-bit Networks
                     Quantization
-                </b> <br>
+                </b>
                 <br>
                 <strong>Hanshi Sun</strong>, Ao Wang, Ninghao Pu, Zhiqing Li, Junguang Huang, <a href="https://electronic.seu.edu.cn/lh/list.htm">Hao Liu</a> and Zhi Qi <br>
-                <i>ICAICE</i>, 2021
-                <p></p>
+                <i>ICAICE</i>, 2021 <br><br>
                 <p>
                     <a href="https://preminstrel.github.io/ECG-Classification/" target="blank">project page</a> / 
                     <a href="https://ieeexplore.ieee.org/document/9797527" target="blank">paper</a> / 
@@ -226,6 +227,7 @@
                     <i>M.S. in Electrical & Computer Engineering</i>
                     <ul>
                         <li>Overall GPA: <font style="color: #bb0000;"> 4.0/4.0</font></li>
+                        <li>Teaching Assistant @ Introduction to Deep Learning, Introduction to Machine Learning</li>
                     </ul>
                 </td>
                 <td width="120px">
