--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             text-decoration: underline;
             cursor: pointer;
             outline: none;
+            color: black;
         }
 
         .selected-button {
@@ -161,7 +162,7 @@
                     <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
                     <p><i>Conference on Language Modeling (COLM)</i>, 2024</p><br>
                     <p>
-                        <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">project page</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">video</a> / <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:bp-itwUOHXAJ:scholar.google.com/&output=citation&scisdr=ClG0a-g6EJ-bnjzv8TA:AFWwaeYAAAAAZo7p6TC4VnrhNULFVGO079MsrrU&scisig=AFWwaeYAAAAAZo7p6QAHswb1bAfhVcA_4lmIAIE&scisf=4&ct=citation&cd=-1&hl=en", target="blank">bibtex</a>
+                        <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">project page</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">video</a> / <a href="bibtex/sun2024triforce.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>Training-free Lossless Long Sequence Generation Acceleration</p>
@@ -184,7 +185,7 @@
                     <br>
                     <p><i>Computer Vision and Pattern Recognition (CVPR) Workshop</i>, 2024</p><br>
                     <p>
-                        <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code <img src="https://img.shields.io/github/stars/DorisBao/BMAD?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:zg9A8D2nj5AJ:scholar.google.com/&output=citation&scisdr=ClGWMUBaEJ-bnjzs36U:AFWwaeYAAAAAZo7qx6WIYXhq7H91D5L0JnGB5KA&scisig=AFWwaeYAAAAAZo7qx3TC4XO3J2dZG48jGGd460o&scisf=4&ct=citation&cd=-1&hl=en", target="blank">bibtex</a>
+                        <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code <img src="https://img.shields.io/github/stars/DorisBao/BMAD?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/bao2024bmad.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>This benchmark encompasses six reorganized datasets from five medical domains (i.e. brain MRI, liver CT, retinal OCT, chest X-ray, and digital histopathology) and three key evaluation metrics, and includes a total of fourteen state-of-the-art AD algorithms.</p>
@@ -228,7 +229,7 @@
                     <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
                     <p><i>Conference on Language Modeling (COLM)</i>, 2024</p><br>
                     <p>
-                        <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">project page</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">video</a> / <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:bp-itwUOHXAJ:scholar.google.com/&output=citation&scisdr=ClG0a-g6EJ-bnjzv8TA:AFWwaeYAAAAAZo7p6TC4VnrhNULFVGO079MsrrU&scisig=AFWwaeYAAAAAZo7p6QAHswb1bAfhVcA_4lmIAIE&scisf=4&ct=citation&cd=-1&hl=en", target="blank">bibtex</a>
+                        <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">project page</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">video</a> / <a href="bibtex/sun2024triforce.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>Training-free Lossless Long Sequence Generation Acceleration</p>
@@ -251,7 +252,7 @@
                     <br>
                     <p><i>Computer Vision and Pattern Recognition (CVPR) Workshop</i>, 2024</p><br>
                     <p>
-                        <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code <img src="https://img.shields.io/github/stars/DorisBao/BMAD?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:zg9A8D2nj5AJ:scholar.google.com/&output=citation&scisdr=ClGWMUBaEJ-bnjzs36U:AFWwaeYAAAAAZo7qx6WIYXhq7H91D5L0JnGB5KA&scisig=AFWwaeYAAAAAZo7qx3TC4XO3J2dZG48jGGd460o&scisf=4&ct=citation&cd=-1&hl=en", target="blank">bibtex</a>
+                        <a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">arXiv</a> / <a href="https://github.com/DorisBao/BMAD" target="blank">code <img src="https://img.shields.io/github/stars/DorisBao/BMAD?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/bao2024bmad.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>This benchmark encompasses six reorganized datasets from five medical domains (i.e. brain MRI, liver CT, retinal OCT, chest X-ray, and digital histopathology) and three key evaluation metrics, and includes a total of fourteen state-of-the-art AD algorithms.</p>
@@ -270,9 +271,9 @@
                     <b>Combating Medical Noisy Labels by Disentangled Distribution Learning and Consistency Regularization
                     </b> <br> <br>
                     <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>, <a href="https://huangleibuaa.github.io">Lei Huang</a>, <a href="https://taozh2017.github.io">Tao Zhou</a> and <strong>Hanshi Sun</strong><br>
-                    <i>Future Generation Computer Systems (FGCS)</i>, 2022<br><br>
+                    <i>Future Generation Computer Systems (FGCS)</i>, 2023<br><br>
                     <p>
-                        <a href="https://www.sciencedirect.com/science/article/pii/S0167739X22004228" target="blank">paper</a>
+                        <a href="https://www.sciencedirect.com/science/article/pii/S0167739X22004228" target="blank">paper</a> / <a href="bibtex/zhou2023combating.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>Disentangled distribution learning reduces effect of label uncertainty and ambiguity</p>
@@ -293,11 +294,11 @@
                     </b>
                     <br>
                     <strong>Hanshi Sun</strong>, Ao Wang, Ninghao Pu, Zhiqing Li, Junguang Huang, <a href="https://electronic.seu.edu.cn/lh/list.htm">Hao Liu</a> and Zhi Qi <br>
-                    <i>ICAICE</i>, 2021 <br><br>
+                    <i>ICAICE</i>, 2021<br><br>
                     <p>
                         <a href="https://preminstrel.github.io/ECG-Classification/" target="blank">project page</a> / 
                         <a href="https://ieeexplore.ieee.org/document/9797527" target="blank">paper</a> / 
-                        <a href="https://github.com/preminstrel/ECG-Classification" target="blank">code <img src="https://img.shields.io/github/stars/preminstrel/ECG-Classification?style=social&label=Github+Stars" style="vertical-align:middle"></a> 
+                        <a href="https://github.com/preminstrel/ECG-Classification" target="blank">code <img src="https://img.shields.io/github/stars/preminstrel/ECG-Classification?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/sun2021arrhythmia.txt", target="blank">bibtex</a>
                     </p>
                     <br>
                     <p>Present a 1-D adaptive loss-aware quantization, achieving a high compression rate that reduces memory consumption by 23.36x</p>
