--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
                     <p><i>Conference on Language Modeling (COLM)</i>, 2024</p><br>
                     <p>
-                        <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">project page</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">video</a> / <a href="bibtex/sun2024triforce.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/TriForce%3A-Lossless-Acceleration-of-Long-Sequence-Sun-Chen/d0deaec3e1f74701ac43600d9e64c5c969be7391"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/d0deaec3e1f74701ac43600d9e64c5c969be7391?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
+                        <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">website</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">demo</a> / <a href="bibtex/sun2024triforce.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/TriForce%3A-Lossless-Acceleration-of-Long-Sequence-Sun-Chen/d0deaec3e1f74701ac43600d9e64c5c969be7391"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/d0deaec3e1f74701ac43600d9e64c5c969be7391?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
                     </p>
                     <br>
                     <p>Training-free Lossless Long Sequence Generation Acceleration</p>
@@ -229,7 +229,7 @@
                     <strong>Hanshi Sun</strong>, <a href="https://dreaming-panda.github.io/">Zhuoming Chen</a>, <a href="https://xinyuyang.me/">Xinyu Yang</a>, <a href="https://yuandong-tian.com/">Yuandong Tian</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a><br>
                     <p><i>Conference on Language Modeling (COLM)</i>, 2024</p><br>
                     <p>
-                        <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">project page</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">video</a> / <a href="bibtex/sun2024triforce.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/TriForce%3A-Lossless-Acceleration-of-Long-Sequence-Sun-Chen/d0deaec3e1f74701ac43600d9e64c5c969be7391"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/d0deaec3e1f74701ac43600d9e64c5c969be7391?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
+                        <a href="https://infini-ai-lab.github.io/TriForce/" target="blank">website</a> / <a href="https://arxiv.org/abs/2404.11912.pdf" target="blank">arXiv</a> / <a href="https://github.com/infini-ai-lab/TriForce/" target="blank">code <img src="https://img.shields.io/github/stars/infini-ai-lab/TriForce?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="https://youtu.be/vRAaAyjr6Jo" target="blank">demo</a> / <a href="bibtex/sun2024triforce.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/TriForce%3A-Lossless-Acceleration-of-Long-Sequence-Sun-Chen/d0deaec3e1f74701ac43600d9e64c5c969be7391"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/d0deaec3e1f74701ac43600d9e64c5c969be7391?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
                     </p>
                     <br>
                     <p>Training-free Lossless Long Sequence Generation Acceleration</p>
@@ -296,7 +296,7 @@
                     <strong>Hanshi Sun</strong>, Ao Wang, Ninghao Pu, Zhiqing Li, Junguang Huang, <a href="https://electronic.seu.edu.cn/lh/list.htm">Hao Liu</a> and Zhi Qi <br>
                     <i>ICAICE</i>, 2021<br><br>
                     <p>
-                        <a href="https://preminstrel.github.io/ECG-Classification/" target="blank">project page</a> / 
+                        <a href="https://preminstrel.github.io/ECG-Classification/" target="blank">website</a> / 
                         <a href="https://ieeexplore.ieee.org/document/9797527" target="blank">paper</a> / 
                         <a href="https://github.com/preminstrel/ECG-Classification" target="blank">code <img src="https://img.shields.io/github/stars/preminstrel/ECG-Classification?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/sun2021arrhythmia.txt", target="blank">bibtex</a> <a href="https://www.semanticscholar.org/paper/Arrhythmia-Classifier-Using-Convolutional-Neural-Sun-Wang/14b3ee81e4186b92107cc9ad40f39f4c1ac8fda4"><img src="https://img.shields.io/badge/dynamic/json?label=citation&query=citationCount&url=https://api.semanticscholar.org/graph/v1/paper/14b3ee81e4186b92107cc9ad40f39f4c1ac8fda4?fields=citationCount;&style=flat-square&logo=semanticscholar&logoColor=black&labelColor=b6fcfa&color=b6fcfa" alt="citation" style="vertical-align:middle"></a>
                     </p>
@@ -441,7 +441,7 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <p><strong>ByteDance Inc., Seattle, WA (Jun 2024 - Aug 2024)</strong></p>
+                    <p><strong>ByteDance Inc., Seattle, United States (Jun 2024 - Aug 2024)</strong></p>
                     <i>Machine Learning System Research Intern in Seed-Foundation Team</i>
                     <ul>
                         <li>Placeholder</li>
@@ -470,7 +470,7 @@
             <tr></tr>
         </tbody>
     </table>
-    <h2>Miscellaneous</h2>
+    <!-- <h2>Miscellaneous</h2>
     <h4>Videos:</h4>
     <iframe width="500" height="300" src="https://www.youtube.com/embed/JYPw38QwzDM"></iframe>   
     <p>
@@ -487,7 +487,7 @@
             <li>CUC: <a href="https://primopan.github.io">Primo Pan</a></li>
         </ul>
     </details>
-    </p>
+    </p> -->
     <div clss="footer">
         <p>
             <center>
