--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <p><strong>ByteDance Inc., Seattle, United States (Jun 2024 - Aug 2024)</strong></p>
+                    <p><strong>ByteDance Inc., Seattle, United States (Jun 2024 - Present)</strong></p>
                     <i>Machine Learning System Research Intern in Seed-Foundation Team</i>
                     <ul>
                         <li>Placeholder</li>
